--- a/static/styles/input_pill.css
+++ b/static/styles/input_pill.css
@@ -59,7 +59,7 @@
         padding: 0;
 
         .pill {
-            padding-right: 4px;
+            padding-right: 0.25rem;
             cursor: not-allowed;
 
             &:focus {
