--- a/static/styles/right_sidebar.css
+++ b/static/styles/right_sidebar.css
@@ -23,9 +23,9 @@
         text-overflow: ellipsis;
         list-style-type: none;
         border-radius: 4px;
-        padding-right: 15px;
-        padding-top: 1px;
-        padding-bottom: 2px;
+        padding-right: 0.9375rem;
+        padding-top: 0.0625rem;
+        padding-bottom: 0.125rem;
 
         .user-list-sidebar-menu-icon {
             position: absolute;
@@ -153,8 +153,8 @@
     display: block;
     width: 45px;
     height: 19px;
-    padding-top: 12px;
-    padding-bottom: 9px;
+    padding-top: 0.75rem;
+    padding-bottom: 0.5625rem;
 
     &:hover {
         color: inherit;
