--- a/static/styles/user_status.css
+++ b/static/styles/user_status.css
@@ -14,8 +14,8 @@
     }
 
     .user-status-header {
-        padding-top: 4px;
-        padding-bottom: 4px;
+        padding-top: 0.25rem;
+        padding-bottom: 0.25rem;
         height: 5%;
         width: 100%;
         text-align: center;
